@@ -39,7 +39,6 @@ import hudson.security.Permission;
 import jenkins.model.Jenkins;
 import jenkins.model.ModelObjectWithChildren;
 import jenkins.model.ModelObjectWithContextMenu;
-import org.apache.commons.lang3.StringUtils;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
 import org.kohsuke.stapler.StaplerRequest2;
@@ -106,7 +105,7 @@ public class Diagnostics implements ModelObjectWithChildren, ModelObjectWithCont
      */
     private String makeRelativeUrl(String context, String name) {
         StringBuilder url = new StringBuilder(name);
-        if (!StringUtils.isBlank(context)) {
+        if (context != null && !context.isBlank()) {
             if (!context.endsWith("/")) {
                 url.insert(0, '/');
             }
